fix h1 alignment

--- a/common/common.css
+++ b/common/common.css
@@ -14,6 +14,10 @@ body {
     text-align: justify;
 }
 
+h1 {
+    text-align: center;
+}
+
 h1, h2, h3 {
     line-height: 1.2;
 }
@@ -29,10 +33,6 @@ main {
 
 article footer {
     text-align: right;
-}
-
-article h1 {
-    text-align: center;
 }
 
 .poem {
